# datasette-sheets

./: .gitignore  CLAUDE.md  Justfile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_sheets/: CLAUDE.md  __init__.py  _queries.py  broadcast.py  db.py  migrations.py  paper.py  permissions.py  router.py  view_sql.py
datasette_sheets/routes/: __init__.py  cells.py  data.py  dropdown_rules.py  filters.py  helpers.py  named_ranges.py  schemas.py  sheets.py  sse.py  views.py  workbooks.py
datasette_sheets/sql/: _queries.sql.json  queries.sql
datasette_sheets/static/: sheets_layout.css
datasette_sheets/templates/: sheets_base.html  sheets_workbook_list.html
e2e/: CLAUDE.md  bold.spec.ts  col-delete.spec.ts  col-move.spec.ts  collaboration.spec.ts  date-arithmetic.spec.ts  delete.spec.ts  force-text.spec.ts  formula-edit.spec.ts  helpers.ts  idle-network.spec.ts  paste.spec.ts  persistence.spec.ts  row-delete.spec.ts  row-move.spec.ts  smoke.spec.ts  virtualization.spec.ts
frontend/: .prettierignore  CLAUDE.md  api.d.ts  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: test-setup.ts
frontend/src/lib/: api.ts  cellMenuActions.ts  client.ts  clipboard.ts  engine.ts  formatCommands.ts  sheetKeyboard.ts  sheetLifecycle.ts  sql.ts  sse.ts  virtualization.ts
frontend/src/lib/__tests__/: api.test.ts  cell-id-helpers.test.ts  clipboardPlainText.test.ts  clipboardStyling.test.ts  engine.test.ts  filter.test.ts  formulaShift.test.ts  sheetKeyboard.test.ts  sql.test.ts  sse.test.ts  virtualization.test.ts
frontend/src/lib/actions/: anchorTo.ts  hoverIntent.ts  keepInViewport.ts
frontend/src/lib/clipboard/: sheetClipboard.ts
frontend/src/lib/components/: BorderPicker.svelte  Cell.svelte  CellContextMenu.svelte  ColorPicker.svelte  CreateViewDialog.svelte  DropdownPopover.svelte  DropdownRuleEditor.svelte  FilterColumnPopover.svelte  FormatMenu.svelte  FormulaBar.svelte  Grid.svelte  NamedRangesPanel.svelte  SheetTabs.svelte  SignatureHelpPopup.svelte  StatusBar.svelte  Toolbar.svelte
frontend/src/lib/spreadsheet/: autofit.ts  cell-style.ts  formatter.ts  formula-edit.ts  formula-helpers.ts  keymap.ts  palettes.ts  types.ts
frontend/src/lib/stores/: clipboard.ts  columnWidths.ts  createView.ts  debug.ts  dropdownRules.ts  filter.ts  headerSelection.ts  namedRanges.ts  (+5 more)
scripts/: clean-stale-gen.py  embed-preview-shot.mjs  screenshots.mjs
scripts/shot-plugins/: seed.py
specs/: CLAUDE.md  INDEX.md  README.md  sheet.cell.boolean.md  sheet.cell.context-menu.md  sheet.cell.copy-api-url.md  sheet.cell.copy-from-menu.md  sheet.cell.copy-reference.md  sheet.cell.custom.md  sheet.cell.cut-from-menu.md  sheet.cell.force-text.md  sheet.cell.format-submenu.md  sheet.cell.hyperlink.md  sheet.cell.open-api-url.md  sheet.cell.paste-from-menu.md  sheet.cell.pin.md  sheet.cell.spill.md  sheet.cell.sql-array-formula.md  sheet.clipboard.copy.md  sheet.clipboard.cut.md  sheet.clipboard.escape-cancels-mark.md  sheet.clipboard.mark-visual.md  sheet.clipboard.paste-as-values.md  sheet.clipboard.paste-fill-selection.md  sheet.clipboard.paste-formula-shift.md  sheet.clipboard.paste.md  sheet.clipboard.sheet-switch-clears-mark.md  sheet.column.auto-fit-double-click.md  sheet.column.context-menu-delete-only.md  sheet.column.context-menu.md  sheet.column.drag-reorder.md  sheet.column.insert-left-right.md  sheet.column.resize-drag.md  sheet.data.dropdown.md  sheet.debug.mode.md  sheet.delete.column-confirm.md  sheet.delete.column-right-click.md  sheet.delete.context-menu-dismiss.md  sheet.delete.delete-key-clears.md  sheet.delete.refs-rewrite.md  (+116 more)
tests/: CLAUDE.md  conftest.py  test_acl_backfill.py  test_broadcast.py  test_col_move.py  test_col_move_shift.py  test_col_shift.py  test_cols.py  test_cols_insert.py  test_dropdown_rules.py  test_filters.py  test_filters_shift.py  test_gen_queries.py  test_named_ranges.py  test_queries.py  test_route_guards.py  test_row_move.py  test_row_move_shift.py  test_row_shift.py  test_rows.py  test_share_and_presence.py  test_sidebar.py  test_sse.py  test_typed_cells.py  test_view_sql.py  test_views.py  test_workbook_resource.py  test_workbooks.py
tools/: gen_queries.py
(+85 files in other folders)
