[project]
name = "datasette-sheets"
version = "0.0.1a5"
description = "Spreadsheets in Datasette"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>1a",
    # Per-workbook sharing is built on datasette-acl (grants/roles) and the
    # reusable <datasette-acl-share-dialog> from datasette-acl-share — both hard
    # deps: the permission model resolves every per-workbook check through acl
    # and the workbook page always hosts the share dialog.
    "datasette-acl>=0.6a1",
    "datasette-acl-share>=0.0.1a7",
    "datasette-plugin-router>=0.0.1a3",
    "datasette-vite>=0.0.1a4",
    "sqlite-migrate>=0.1b0",
    "sqlite-utils>=3.38",
    # Rust formula + range engine. PyPI package `liblotus`; importable
    # module is `lotus`. Keep this pin in sync with the
    # `LIBLOTUS_VERSION` in `Justfile` so the Python wheel and the wasm
    # tarball land at the same liblotus release.
    "liblotus==0.0.1a2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "datasette-debug-gotham",
    # >=0.0.1a3: a1/a2 call vite_css_urls(..., vite_dev_path=...), a kwarg
    # datasette-vite>=0.0.1a4 (a hard dep) no longer accepts — 500s every page
    # that renders the sidebar. a3 drops it.
    "datasette-sidebar>=0.0.1a3",
    "datasette-user-profiles>=0.1.0a6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-sheets"
Changelog = "https://github.com/datasette/datasette-sheets/releases"
Issues = "https://github.com/datasette/datasette-sheets/issues"
CI = "https://github.com/datasette/datasette-sheets/actions"

[project.optional-dependencies]
# `datasette-sheets[paper]` adds datasette-paper so a sheets workbook can be
# pasted/embedded as a rich block inside a paper document (see paper.py + the
# frontend paper-embed target). datasette-paper isn't on PyPI yet, so it's
# resolved from the sibling checkout's built wheel via [tool.uv.sources] below.
paper = [
    "datasette-paper>=0.0.2a3",
]

[tool.uv.sources]
datasette-paper = { path = "../datasette-paper/dist/datasette_paper-0.0.2a3-py3-none-any.whl" }

[project.entry-points.datasette]
sheets = "datasette_sheets"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["datasette_sheets*"]

[tool.setuptools.package-data]
datasette_sheets = ["static/**/*", "manifest.json", "templates/*", "sql/*.sql", "sql/*.json"]

